--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changelogen",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Generate Beautiful Changelogs using Conventional Commits",
   "repository": "unjs/changelogen",
   "license": "MIT",
@@ -27,7 +27,7 @@
     "dev": "vitest dev",
     "lint": "eslint --ext .ts,.js,.mjs,.cjs .",
     "prepack": "unbuild",
-    "release": "pnpm test && pnpm changelogen --release && git push --follow-tags && pnpm publish",
+    "release": "pnpm changelogen --release && git push --follow-tags && pnpm publish",
     "test": "pnpm lint && vitest run --coverage"
   },
   "dependencies": {
